--- a/index.ipynb
+++ b/index.ipynb
@@ -482,12 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant['rating'] >= rating"
+    "    if restaurant['rating'] >= rating:\n",
+    "        return True\n",
+    "    return False"
    ]
   },
   {
